Text out of screen bug fixed

--- a/src/app/components/task-item/task-item.component.scss
+++ b/src/app/components/task-item/task-item.component.scss
@@ -2,3 +2,7 @@ ion-item {
   margin: 5px;
   padding: 10px 20px;
 }
+ion-checkbox{
+  --border-width: 15px;
+  --checkmark-width: 5px;
+}
